force-app/main/default/objects/Onboarding_Attempt__c/Onboarding_Attempt__c.object-meta.xml
<CustomObject>
    <description>It is essential for the business to be able to track current and historical Onboarding attempts on an account for a variety of reasons: KPIs, goals, success rate of each Onboarding attempt, YoY/MoM activation rates etc. When an account becomes a customer, a new SaaS and/or Billing Onboarding Attempt(s) is created. Once the attempt is Closed or Canceled (or any other closed status), the Attempt locks down and no future changes will be made to it.</description>
    <label>Onboarding Attempt</label>
    <nameField>
        <label>Onboarding Attempt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>