force-app/main/default/objects/Onboarding_Attempt__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboarding Attempts</relationshipLabel>
    <relationshipName>Onboarding_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>