force-app/main/default/objects/Onboarding_Attempt__c/fields/Account_AE_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_AE_Owner__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Account_AE_Owner_Stamp__r.FirstName  &amp; &quot; &quot; &amp;  Account_AE_Owner_Stamp__r.LastName,
IF(NOT(ISBLANK( Account_AE_Owner_Stamp__c )),
 Account_AE_Owner_Stamp__r.FirstName  &amp; &quot; &quot; &amp;  Account_AE_Owner_Stamp__r.LastName ,
  Account__r.AE_Owner__r.FirstName &amp; &quot; &quot; &amp;  Account__r.AE_Owner__r.LastName  )
)</formula>
    <label>Account AE Owner</label>
    <type>Text</type>
</CustomField>