force-app/main/default/objects/Onboarding_Attempt__c/fields/Account_AE_Owner_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Account_AE_Owner_Stamp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account AE Owner - Stamp</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Attempts2</relationshipName>
    <type>Lookup</type>
</CustomField>