force-app/main/default/objects/Onboarding_Attempt__c/fields/Account_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Type__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
TEXT(Account_Customer_Type_Stamp__c),
IF(NOT(ISBLANK(TEXT( Account_Customer_Type_Stamp__c  ))),
TEXT( Account_Customer_Type_Stamp__c),
TEXT( Account__r.Customer_Type__c ) )
)</formula>
    <label>Account Customer Type</label>
    <type>Text</type>
</CustomField>