force-app/main/default/objects/Onboarding_Attempt__c/fields/Account_Customer_Type_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Type_Stamp__c</fullName>
    <label>Account Customer Type - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multi-Site Parent</fullName>
            </value>
            <value>
                <fullName>Multi-Site Child</fullName>
            </value>
            <value>
                <fullName>Single-Site</fullName>
            </value>
            <value>
                <fullName>Non-Target</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Government Payer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>