force-app/main/default/objects/Onboarding_Attempt__c/fields/Account_OBS_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_OBS_Owner__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Account_OBS_Owner_Stamp__r.FirstName &amp; &quot; &quot; &amp; Account_OBS_Owner_Stamp__r.LastName,
IF(NOT(ISBLANK( Account_AE_Owner_Stamp__c )),
Account_OBS_Owner_Stamp__r.FirstName &amp; &quot; &quot; &amp; Account_OBS_Owner_Stamp__r.LastName ,
Account__r.CSM_Owner1__r.FirstName &amp; &quot; &quot; &amp; Account__r.CSM_Owner1__r.LastName)
)</formula>
    <label>Account OBS Owner</label>
    <type>Text</type>
</CustomField>