force-app/main/default/objects/Onboarding_Attempt__c/fields/Account_SaaS_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_SaaS_Owner__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Account_SaaS_Owner_Stamp__r.FirstName  &amp; &quot; &quot; &amp;  Account_SaaS_Owner_Stamp__r.LastName,
IF(NOT(ISBLANK( Account_SaaS_Owner_Stamp__c )),
 Account_SaaS_Owner_Stamp__r.FirstName  &amp; &quot; &quot; &amp;  Account_SaaS_Owner_Stamp__r.LastName,
   Account__r.SaaS_Owner__r.FirstName   &amp; &quot; &quot; &amp;  Account__r.SaaS_Owner__r.LastName )
)</formula>
    <label>Account SaaS Owner</label>
    <type>Text</type>
</CustomField>