force-app/main/default/objects/Onboarding_Attempt__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
TEXT(Account_Type_Stamp__c),
IF(NOT(ISBLANK(TEXT( Account_Type_Stamp__c  ))),
TEXT(Account_Type_Stamp__c),
TEXT(Account__r.Type) )
)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>