force-app/main/default/objects/Onboarding_Attempt__c/fields/Account_Type_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Stamp__c</fullName>
    <label>Account Type - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Cancelled Customer</fullName>
                <label>Canceled Customer</label>
            </value>
            <value>
                <fullName>Inactive Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>