force-app/main/default/objects/Onboarding_Attempt__c/fields/Bill_Rate_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate_Uploaded_Date__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;Billing&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;)
        ),
        Bill_Rate_Uploaded_Date_Stamp__c,
        IF(
            NOT(ISBLANK(Bill_Rate_Uploaded_Date_Stamp__c)),
            Bill_Rate_Uploaded_Date_Stamp__c,
            Account__r.School_Object__r.Bill_Rate_Uploaded_Date__c
        )
    ),
    NULL
)</formula>
    <label>Bill Rate Uploaded Date</label>
    <type>Date</type>
</CustomField>