force-app/main/default/objects/Onboarding_Attempt__c/fields/Bill_Rate_Uploaded_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate_Uploaded_Date_Stamp__c</fullName>
    <label>Bill Rate Uploaded Date - Stamp</label>
    <type>Date</type>
</CustomField>