force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Date__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;Billing&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        Billing_Activation_Date_Stamp__c,
        IF(
            NOT(ISBLANK(Billing_Activation_Date_Stamp__c)),
            Billing_Activation_Date_Stamp__c,
            DATEVALUE(Account__r.School_Object__r.Billing_Activation_Date_2024__c)
        )
    ),
    NULL
)</formula>
    <label>Billing Activation Date</label>
    <type>Date</type>
</CustomField>