force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Activation_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Funnel_Stage__c</fullName>
    <formula>IF(RecordType.Name=&apos;Billing&apos;,
IF(NOT(ISBLANK(TEXT( Billing_Activation_Funnel_Stage_Stamp__c ))),
TEXT(Billing_Activation_Funnel_Stage_Stamp__c),
 TEXT(Account__r.School_Object__r.Billing_Activation_Funnel_Stage_2024__c) ),&apos;&apos;
)</formula>
    <label>Billing Activation Funnel Stage</label>
    <type>Text</type>
</CustomField>