force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Activation_Override__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Override__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;Billing&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        Billing_Activation_Override_Stamp__c,
        IF(
            NOT(ISBLANK(Billing_Activation_Override_Stamp__c)),
            Billing_Activation_Override_Stamp__c,
            Combined_Funnel__r.Billing_Activation_Override__c
        )
    ),
    &apos;&apos;
)</formula>
    <label>Billing Activation Override</label>
    <type>Text</type>
</CustomField>