force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Activation_Override_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Override_Stamp__c</fullName>
    <label>Billing Activation Override - Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>