force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Activation_Start_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Start_Date_Stamp__c</fullName>
    <label>Billing Activation Start Date - Stamp</label>
    <type>Date</type>
</CustomField>