force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Adding_Payers_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Adding_Payers_Stage_Met_Stamp__c</fullName>
    <label>Billing Adding Payers Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>