force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Addng_Students_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Addng_Students_Stage_Met_Stamp__c</fullName>
    <label>Billing Addng Students Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>