force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Complete_Set_Up_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Complete_Set_Up_Stage_Met_Date__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;Billing&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        Billing_Complete_SetUp_Stage_Met_Stamp__c,
        IF(
            NOT(ISBLANK(Billing_Complete_SetUp_Stage_Met_Stamp__c)),
            Billing_Complete_SetUp_Stage_Met_Stamp__c,
            DATEVALUE(Account__r.School_Object__r.Billing_Complete_Set_Up_Stage_Met_Date__c)
        )
    ),
    NULL
)</formula>
    <label>Billing Complete Set-Up Stage Met Date</label>
    <type>Date</type>
</CustomField>