force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Complete_SetUp_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Complete_SetUp_Stage_Met_Stamp__c</fullName>
    <label>Billing Complete SetUp Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>