force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Onboarding_Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Eligible_Date__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;Billing&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        Billing_Onboarding_Eligible_Date_Stamp__c,
        IF(
            NOT(ISBLANK(Billing_Onboarding_Eligible_Date_Stamp__c)),
            Billing_Onboarding_Eligible_Date_Stamp__c,
            Account__r.School_Object__r.Billing_Onboarding_Eligible_Date__c
        )
    ),
    NULL
)</formula>
    <label>Billing Onboarding Eligible Date</label>
    <type>Date</type>
</CustomField>