force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Onboarding_Eligible_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Eligible_Date_Stamp__c</fullName>
    <label>Billing Onboarding Eligible Date - Stamp</label>
    <type>Date</type>
</CustomField>