force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Onboarding_Funnel_Stage_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Funnel_Stage_Stamp__c</fullName>
    <label>Billing Onboarding Funnel Stage - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Stage</valueSetName>
    </valueSet>
</CustomField>