force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Onboarding_Status_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Status_Stamp__c</fullName>
    <label>Billing Onboarding Status - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status</valueSetName>
    </valueSet>
</CustomField>