force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Online_Payment_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Online_Payment_Stage_Met_Stamp__c</fullName>
    <label>Billing Online Payment Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>