force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Online_Payments_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Online_Payments_Stage_Met_Date__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Billing_Online_Payment_Stage_Met_Stamp__c,
IF(
NOT(ISBLANK( Billing_Online_Payment_Stage_Met_Stamp__c )),
Billing_Online_Payment_Stage_Met_Stamp__c,
DATEVALUE( Account__r.School_Object__r.Billing_Online_Payments_Stage_Met_Date__c )
)
)</formula>
    <label>Billing Online Payments Stage Met Date</label>
    <type>Date</type>
</CustomField>