force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Override_Approved_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>Billing_Override_Approved_by_Manager__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;Billing&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        TEXT(Billing_Override_Approved_by_Mgr_Stamp__c),
        IF(
            NOT(ISBLANK(TEXT(Billing_Override_Approved_by_Mgr_Stamp__c))),
            TEXT(Billing_Override_Approved_by_Mgr_Stamp__c),
            TEXT(Combined_Funnel__r.Billing_Override_Approved_by_Manager__c)
        )
    ),
    &apos;&apos;
)</formula>
    <label>Billing Override Approved by Manager</label>
    <type>Text</type>
</CustomField>