force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Override_Approved_by_Mgr_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Override_Approved_by_Mgr_Stamp__c</fullName>
    <label>Billing Override Approved by Mgr - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Override_Approved_by_Manager</valueSetName>
    </valueSet>
</CustomField>