force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Override_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Billing_Override_Reasoning__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;Billing&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        TEXT(Billing_Override_Reasoning_Stamp__c),
        IF(
            NOT(ISPICKVAL(Billing_Override_Reasoning_Stamp__c, &quot;&quot;)),
            TEXT(Billing_Override_Reasoning_Stamp__c),
            TEXT(Combined_Funnel__r.Billing_Override_Reasoning__c)
        )
    ),
    &apos;&apos;
)</formula>
    <label>Billing Override Reasoning</label>
    <type>Text</type>
</CustomField>