force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Override_Reasoning_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Override_Reasoning_Stamp__c</fullName>
    <label>Billing Override Reasoning - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High % Subsidized</fullName>
            </value>
            <value>
                <fullName>Low SES - Parent Adoption</fullName>
            </value>
            <value>
                <fullName>Processing Fees - High % Offline Payments</fullName>
            </value>
            <value>
                <fullName>High Number of Non-Target Students</fullName>
            </value>
            <value>
                <fullName>Large Number of Active Students Not Attending Regularly</fullName>
            </value>
            <value>
                <fullName>Other (Must Provide Context)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>