force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Sending_Bills_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Sending_Bills_Stage_Met_Date__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;Billing&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        Billing_Sending_Bills_Stage_Met_Stamp__c,
        IF(
            NOT(ISBLANK(Billing_Sending_Bills_Stage_Met_Stamp__c)),
            Billing_Sending_Bills_Stage_Met_Stamp__c,
            DATEVALUE(Account__r.School_Object__r.Billing_Sending_Bills_Stage_Met_Date__c)
        )
    ),
    NULL
)</formula>
    <label>Billing Sending Bills Stage Met Date</label>
    <type>Date</type>
</CustomField>