force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_SetUp_Bills_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_SetUp_Bills_Stage_Met_Stamp__c</fullName>
    <label>Billing SetUp Bills Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>