force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Status_at_CW__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status_at_CW__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
        ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
    ),
    TEXT(Billing_Status_at_CW_Stamp__c),
    IF(
        NOT(ISPICKVAL(Billing_Status_at_CW_Stamp__c, &quot;&quot;)),
        TEXT(Billing_Status_at_CW_Stamp__c),
        TEXT(Combined_Funnel__r.Billing_Status_at_CW__c)
    )
)</formula>
    <label>Billing Status at CW</label>
    <type>Text</type>
</CustomField>