force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Status_at_CW_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status_at_CW_Stamp__c</fullName>
    <label>Billing Status at CW - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Status_at_CW</valueSetName>
    </valueSet>
</CustomField>