force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Submit_Verify_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Submit_Verify_Stage_Met_Date__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Billing_Submit_Verify_Stage_Met_Stamp__c,
IF(RecordType.Name = &apos;Billing&apos;,
IF(NOT(ISBLANK( Billing_Submit_Verify_Stage_Met_Stamp__c   )),
Billing_Submit_Verify_Stage_Met_Stamp__c ,
 DATEVALUE( Account__r.School_Object__r.Billing_Submit_Verify_Stage_Met_Date__c  )    ), NULL )
)</formula>
    <label>Billing Submit Verify Stage Met Date</label>
    <type>Date</type>
</CustomField>