force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Submit_Verify_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Submit_Verify_Stage_Met_Stamp__c</fullName>
    <label>Billing Submit Verify Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>