force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Training_Call_Completed_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Training_Call_Completed_Stamp__c</fullName>
    <label>Billing Training Call Completed - Stamp</label>
    <type>Date</type>
</CustomField>