force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Training_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Billing_Training_Call_Scheduled__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;Billing&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        Billing_Training_Call_Scheduled_Stamp__c,
        IF(
            NOT(ISBLANK(Billing_Training_Call_Scheduled_Stamp__c)),
            Billing_Training_Call_Scheduled_Stamp__c,
            Combined_Funnel__r.Billing_Training_Call_Scheduled__c
        )
    ),
    NULL
)</formula>
    <label>Billing Training Call Scheduled</label>
    <type>Date</type>
</CustomField>