force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Upsell_Owner__c.field-meta.xml
<CustomField>
    <fullName>Billing_Upsell_Owner__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Billing_Upsell_Owner_Stamp__r.FirstName  &amp; &quot; &quot; &amp;  Billing_Upsell_Owner_Stamp__r.LastName,
IF(NOT(ISBLANK( Billing_Upsell_Owner_Stamp__c )),
 Billing_Upsell_Owner_Stamp__r.FirstName  &amp; &quot; &quot; &amp;  Billing_Upsell_Owner_Stamp__r.LastName,
  Account__r.Billing_Upsell_Owner__r.FirstName  &amp; &quot; &quot; &amp; Account__r.Billing_Upsell_Owner__r.LastName)
)</formula>
    <label>Billing Upsell Owner</label>
    <type>Text</type>
</CustomField>