force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Upsell_Owner_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Upsell_Owner_Stamp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Upsell Owner - Stamp</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Attempts1</relationshipName>
    <type>Lookup</type>
</CustomField>