force-app/main/default/objects/Onboarding_Attempt__c/fields/Billing_Verify_Complet_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verify_Complet_Stage_Met_Stamp__c</fullName>
    <label>Billing Verify Complet Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>