force-app/main/default/objects/Onboarding_Attempt__c/fields/Brand_New_Program__c.field-meta.xml
<CustomField>
    <fullName>Brand_New_Program__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
TEXT(Brand_New_Program_Stamp__c),
IF(NOT(ISBLANK(TEXT(  Brand_New_Program_Stamp__c   ))),
TEXT(Brand_New_Program_Stamp__c),
TEXT( Combined_Funnel__r.Brand_New_Program__c ) )
)</formula>
    <label>Brand New Program</label>
    <type>Text</type>
</CustomField>