force-app/main/default/objects/Onboarding_Attempt__c/fields/Brand_New_Program_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Brand_New_Program_Stamp__c</fullName>
    <label>Brand New Program - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_New_Program_Flag</valueSetName>
    </valueSet>
</CustomField>