force-app/main/default/objects/Onboarding_Attempt__c/fields/Brightwheel_Organization__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_Organization__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Brightwheel_Organization_UUID_Stamp__c,
IF(NOT(ISBLANK( Brightwheel_Organization_UUID_Stamp__c )),
Brightwheel_Organization_UUID_Stamp__c,
  Account__r.School_Object__r.Brightwheel_Org_UUID__c   )
)</formula>
    <label>Brightwheel Organization UUID</label>
    <type>Text</type>
</CustomField>