force-app/main/default/objects/Onboarding_Attempt__c/fields/Brightwheel_Organization_UUID_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_Organization_UUID_Stamp__c</fullName>
    <label>Brightwheel Organization UUID - Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>