force-app/main/default/objects/Onboarding_Attempt__c/fields/Brightwheel_School_UUID__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_School_UUID__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
 Brightwheel_School_UUID_Stamp__c ,
IF(NOT(ISBLANK( Brightwheel_School_UUID_Stamp__c )),
Brightwheel_School_UUID_Stamp__c,
   Account__r.School_Object__r.Brightwheel_School_UUID__c    )
)</formula>
    <label>Brightwheel School UUID</label>
    <type>Text</type>
</CustomField>