force-app/main/default/objects/Onboarding_Attempt__c/fields/Brightwheel_School_UUID_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_School_UUID_Stamp__c</fullName>
    <label>Brightwheel School UUID - Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>