force-app/main/default/objects/Onboarding_Attempt__c/fields/Cancelation_Case_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Case_Stamp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancelation Case - Stamp</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Onboarding Attempts</relationshipLabel>
    <relationshipName>Onboarding_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>