force-app/main/default/objects/Onboarding_Attempt__c/fields/Cancelation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Date__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Cancelation_Date_Stamp__c,
IF(NOT(ISBLANK( Cancelation_Date_Stamp__c   )),
Cancelation_Date_Stamp__c ,
Account__r.School_Object__r.Cancellation_Date__c )
)</formula>
    <label>Cancelation Date</label>
    <type>Date</type>
</CustomField>