force-app/main/default/objects/Onboarding_Attempt__c/fields/Cancelation_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Date_Stamp__c</fullName>
    <label>Cancelation Date - Stamp</label>
    <type>Date</type>
</CustomField>