force-app/main/default/objects/Onboarding_Attempt__c/fields/Case_Cancelation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Cancelation_Reason__c</fullName>
    <formula>TEXT(Cancelation_Case_Stamp__r.Cancellation_Reason__c )</formula>
    <label>Case Cancelation Reason</label>
    <type>Text</type>
</CustomField>